--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -28,6 +28,9 @@
             <tr>
                 <td>Element.Test1</td><td>hello world</td><td id="Element.Test1.Result"></td>
             </tr>
+            <tr>
+                <td>Element.Test2</td><td>I am here</td><td id="Element.Test2.Result"></td>
+            </tr>
         </table>
     </div>
 </body>
