--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -31,6 +31,9 @@
             <tr>
                 <td>Element.Test2</td><td>I am here</td><td id="Element.Test2.Result"></td>
             </tr>
+            <tr>
+                <td>Element.Test3</td><td><div>Parent Div<div>child div</div></div></td><td id="Element.Test3.Result"></td>
+            </tr>
         </table>
     </div>
 </body>
