--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -34,6 +34,9 @@
             <tr>
                 <td>Element.Test3</td><td><div>Parent Div<div>child div</div></div></td><td id="Element.Test3.Result"></td>
             </tr>
+            <tr>
+                <td>Input.Test1</td><td><input type="text" value="Default Text Value"/></td><td id="Input.Test1.Result"></td>
+            </tr>
         </table>
     </div>
 </body>
