--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="A__PropTests/PropTests.js"></script>
     <script src="app.js"></script>
+    <script src="Dh.js"></script>
     <script src="Element.js"></script>
 </head>
 <body>
@@ -24,6 +25,9 @@
             </tr>
             <tr>
                 <td>PropTests.Test2</td><td>Prop Val 2</td><td id="PropTests.Test2.Result"></td>
+            </tr>
+            <tr>
+                <td>PropTests.Test3</td><td>1</td><td id="PropTests.Test3.Result"></td>
             </tr>
             <tr>
                 <td>Element.Test1</td><td>hello world</td><td id="Element.Test1.Result"></td>
