--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -27,7 +27,7 @@
                 <td>PropTests.Test2</td><td>Prop Val 2</td><td id="PropTests.Test2.Result"></td>
             </tr>
             <tr>
-                <td>PropTests.Test3</td><td>1</td><td id="PropTests.Test3.Result"></td>
+                <td>PropTests.Test3</td><td>new value</td><td id="PropTests.Test3.Result"></td>
             </tr>
             <tr>
                 <td>Element.Test1</td><td>hello world</td><td id="Element.Test1.Result"></td>
@@ -40,6 +40,9 @@
             </tr>
             <tr>
                 <td>Input.Test1</td><td><input type="text" value="Default Text Value"/></td><td id="Input.Test1.Result"></td>
+            </tr>
+            <tr>
+                <td>Input.Test2</td><td><input type="text" value="Prop Val 2"/></td><td id="Input.Test2.Result"></td>
             </tr>
         </table>
     </div>
