--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -44,6 +44,9 @@
             <tr>
                 <td>Input.Test2</td><td><input type="text" value="Prop Val 2"/></td><td id="Input.Test2.Result"></td>
             </tr>
+            <tr>
+                <td>TwoWayBinding.Test1</td><td>Div text should echo textbox</td><td id="TwoWayBinding.Test1.Result"></td>
+            </tr>
         </table>
     </div>
 </body>
