--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -9,6 +9,7 @@
     <script src="app.js"></script>
     <script src="Dh.js"></script>
     <script src="Element.js"></script>
+    <script src="InputElement.js"></script>
 </head>
 <body>
     <h1>TypeScript HTML App</h1>
@@ -47,6 +48,10 @@
             <tr>
                 <td>TwoWayBinding.Test1</td><td>Div text should echo textbox</td><td id="TwoWayBinding.Test1.Result"></td>
             </tr>
+            <tr>
+                <td>Lists.Test1</td><td>bbbb</td><td id="Lists.Test1.Result"></td>
+            </tr>
+            
         </table>
     </div>
 </body>
