--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -10,6 +10,7 @@
     <script src="Dh.js"></script>
     <script src="Element.js"></script>
     <script src="InputElement.js"></script>
+    <script src="ie9.js"></script>
 </head>
 <body>
     <h1>TypeScript HTML App</h1>
