--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -52,7 +52,9 @@
             <tr>
                 <td>Lists.Test1</td><td>bbbb</td><td id="Lists.Test1.Result"></td>
             </tr>
-            
+            <tr>
+                <td>Lists.Test2</td><td>bbbb</td><td id="Lists.Test2.Result"></td>
+            </tr>
         </table>
     </div>
 </body>
