--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -6,6 +6,7 @@
     <title>TypeScript HTML App</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="A__PropTests/PropTests.js"></script>
+    <script src="DataExamples/Books.js"></script>
     <script src="app.js"></script>
     <script src="Dh.js"></script>
     <script src="Element.js"></script>
@@ -54,6 +55,9 @@
             </tr>
             <tr>
                 <td>Lists.Test2</td><td>bbbb</td><td id="Lists.Test2.Result"></td>
+            </tr>
+             <tr>
+                <td>DynamicLists.Test1</td><td>cccc</td><td id="DynamicLists.Test1.Result"></td>
             </tr>
         </table>
     </div>
