--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -56,8 +56,11 @@
             <tr>
                 <td>Lists.Test2</td><td>bbbb</td><td id="Lists.Test2.Result"></td>
             </tr>
-             <tr>
+            <tr>
                 <td>DynamicLists.Test1</td><td>cccc</td><td id="DynamicLists.Test1.Result"></td>
+            </tr>
+            <tr>
+                <td>DynamicLists.Test1.Detail</td><td>cccc</td><td id="DynamicLists.Test1.Result.Detail"></td>
             </tr>
         </table>
     </div>
