--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -45,6 +45,9 @@
                 <td>Input.Test1</td><td><input type="text" value="Default Text Value"/></td><td id="Input.Test1.Result"></td>
             </tr>
             <tr>
+                <td>Input.Label2</td><td>tbd</td><td id="Input.Label2.Result"></td>
+            </tr>
+            <tr>
                 <td>Input.Test2</td><td><input type="text" value="Prop Val 2"/></td><td id="Input.Test2.Result"></td>
             </tr>
             <tr>
