checkbox two way binding

--- a/TypeScriptExamples2/default.htm
+++ b/TypeScriptExamples2/default.htm
@@ -51,7 +51,13 @@
                 <td>Input.Test2</td><td><input type="text" value="Prop Val 2"/></td><td id="Input.Test2.Result"></td>
             </tr>
             <tr>
+                <td>Input.Test3</td><td></td><td id="Input.Test3.Result"></td>
+            </tr>
+            <tr>
                 <td>TwoWayBinding.Test1</td><td>Div text should echo textbox</td><td id="TwoWayBinding.Test1.Result"></td>
+            </tr>
+            <tr>
+                <td>TwoWayBinding.Test2</td><td>Div text should echo checkbox</td><td id="TwoWayBinding.Test2.Result"></td>
             </tr>
             <tr>
                 <td>Lists.Test1</td><td>bbbb</td><td id="Lists.Test1.Result"></td>
